fix: wrong font path

--- a/styles/index.css
+++ b/styles/index.css
@@ -20,7 +20,7 @@
 }
 @font-face {
   font-family: 'Helvetica Now Text';
-  src: url('../public/fonts/HelveticaNowText-MedIta.otf');
+  src: url('../public/fonts/HelveticaNowText-MediumItalic.otf');
   font-weight: 500;
   font-style: italic;
 }
